# stl_rda_lg

./: .gitignore  README.md  open_questions.md  pyproject.toml
src/stl_rda_lg/: cli.py
src/stl_rda_lg/api/: __init__.py  openapi.json
src/stl_rda_lg/strlit/: main.py
src/stl_rda_lg/web_scraper/: __init__.py  web_scrapper_conf.py
tests/: test_api.py  test_stl_rda_lg.py  test_web_scraper.py
