[tool.poetry]
authors = ["Luke Garzia <lgarzia@yahoo.com>"]
description = ""
name = "stl_rda_lg"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
mypy = "^0.812"
python = "^3.9"
streamlit = "^0.79.0"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.scripts]
stl-rda-lg = "stl_rda_lg.cli:app"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
